--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "johnhuzhy",
   "license": "UNLICENSED",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/johnhuzhy/MyFullStackDev.git"
