--- a/start1st/package.json
+++ b/start1st/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myfullstackdev",
+  "name": "start1st",
   "version": "1.0.0",
   "description": "test",
   "main": "Start.js",
@@ -21,5 +21,6 @@
   "bugs": {
     "url": "https://github.com/johnhuzhy/MyFullStackDev/issues"
   },
-  "homepage": "https://github.com/johnhuzhy/MyFullStackDev#readme"
+  "homepage": "https://github.com/johnhuzhy/MyFullStackDev#readme",
+  "devDependencies": {}
 }
