--- a/start2nd/package.json
+++ b/start2nd/package.json
@@ -2,8 +2,9 @@
   "name": "start2nd",
   "version": "1.0.0",
   "description": "course",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
+    "start": "nodemon ./senior/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,11 @@
   },
   "homepage": "https://github.com/johnhuzhy/MyFullStackDev#readme",
   "dependencies": {
+    "dateformat": "^4.0.0",
+    "express": "^4.17.1",
     "glob": "^7.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
